--- a/hw01.md
+++ b/hw01.md
@@ -1,1 +1,41 @@
-我的第一次作业
+---
+layout: default
+title: Homework 01 - 使用维基百科（Wikipedia）解释名词
+---
+
+# Homework 01 - 使用维基百科（Wikipedia）解释名词
+
+1. Computer
+
+  A **computer** is a device that can be instructed to perform sequences of arithmetic or logical operations automatically via computer programming.
+
+  计算机是一种可以根据事先编写的程序而执行一系列算术或逻辑运算的设备。
+
+2. Computer science
+
+  **Computer science** is the study of the theory, experimentation, and engineering that form the basis for the design and use of computers.
+
+  计算机科学研究的是有关组成计算机的架构设计与计算机使用，关注的是理论、实验与工程。
+
+3. Software
+
+  Computer software, or simply **software**, is a generic term that refers to a collection of data or computer instructions that tell the computer how to work, in contrast to the physical hardware from which the system is built, that actually performs the work. In computer science and software engineering, computer software is all information processed by computer systems, programs and data.
+
+  软件又称计算机软件，指的是一堆数据的集合或者一堆计算机指令的集合，是相对于那些组成计算机并实际执行工作的硬件而演的。在计算机科学和软件工程中，计算机软件指的是所有被计算机系统、程序、数据处理的信息。
+
+4. Software engineering
+
+  Software engineering is the application of engineering to the development of software in a systematic method.
+
+  软件工程是指通过系统的方法开发软件的一种工程应用。
+
+5. Alan Turing
+
+  Alan Mathison Turing (/ˈtjʊərɪŋ/; 23 June 1912 – 7 June 1954) was an English computer scientist, mathematician, logician, cryptanalyst, philosopher, and theoretical biologist. Turing was highly influential in the development of theoretical computer science, providing a formalisation of the concepts of algorithm and computation with the Turing machine, which can be considered a model of a general purpose computer.
+
+  阿兰·图灵是一位英国的计算机科学技术、数学家、逻辑学家、密码学家、哲学家和理论生物学家。阿兰·图灵在计算机科学理论的发展方面（对后世）产生了高度的影响，（为人类）提供了图灵机的演算法则等概念的正式表述，或者说是一种通用应用计算机的模型。
+
+6. Moore’s law
+  Moore's law is the observation that the number of transistors in a dense integrated circuit doubles about every two years. The observation is named after Gordon Moore, the co-founder of Fairchild Semiconductor and Intel, whose 1965 paper described a doubling every year in the number of components per integrated circuit,[2] and projected this rate of growth would continue for at least another decade.
+
+  摩尔定律指的是一种推断：集成电路中晶体管数量每两年翻一番。这个推断得名自仙童半导体公司和 Intel 公司的联合创始人 Gordon Moore，他在 1965 年发表的论文里称每年集成电路里的组件数量都会翻一番，并预测这种增长速度将持续至少至下一个十年。
