--- a/hw04.md
+++ b/hw04.md
@@ -33,3 +33,7 @@ title: Homework 04 - 解释名词、回答问题
     | BMP    | 3.41 MiB  | Best                                            |
     | JPEG   | 236 KiB   | Same as above                                   |
     | PNG    | 231 KiB   | Nice, little smooth around text but unnoticable |
+
+4. WinRAR 压缩文件的压缩方式是 **Lossless**。
+    因为这种“压缩文件”的首要目标是保证数据的完整性与可靠性，即使是某些可能看起来无关紧要的细节也是需要得到保留的。
+    而有损压缩过的图像与音乐仍能以良好的品质甚至非常接近于原始文件的品质，故这种有损压缩的目标是在讨好人眼/人耳的情况下尽可能地降低文件大小，丢弃不被注意到的细节。
