--- a/hw04.md
+++ b/hw04.md
@@ -22,17 +22,18 @@ title: Homework 04 - 解释名词、回答问题
 
 2. 黄色的 RGB 颜色编码为：`#FFFF00`
 
-3. Windows 屏幕截图，得到一张分辨率为 1259 x 946 的位图，并使用 Windows 画图软件以默认设置分别保存为 bmp、png、jpg 格式：
+3. Windows 屏幕截图，得到一张分辨率为 1259 x 946 的位图，并使用 Windows 画图软件以默认设置分别保存为 bmp、png、jpg、tiff 格式：
 
     ![Sample image in PNG Format](images/homework/04-sample-image.png)
 
     结果如下：
 
-    | Format | File Size | Image Quality                                   |
-    |:-------|:----------|:------------------------------------------------|
-    | BMP    | 3.41 MiB  | Best                                            |
-    | JPEG   | 236 KiB   | Same as above                                   |
-    | PNG    | 231 KiB   | Nice, little smooth around text but unnoticable |
+    | Format | File Size | Compression Ratio | Image Quality                                   |
+    |:-------|:----------|:------------------|:------------------------------------------------|
+    | BMP    | 3.41 MiB  | 100 % (base)      | Best                                            |
+    | PNG    | 236 KiB   | 6.92 %            | Same as above                                   |
+    | TIFF   | 353 KiB   | 10.35 %           | Same as above                                   |
+    | JPEG   | 231 KiB   | 6.77 %            | Nice, little smooth around text but unnoticable |
 
 4. WinRAR 压缩文件的压缩方式是 **Lossless**。
     因为这种“压缩文件”的首要目标是保证数据的完整性与可靠性，即使是某些可能看起来无关紧要的细节也是需要得到保留的。
