--- a/hw04.md
+++ b/hw04.md
@@ -20,7 +20,7 @@ title: Homework 04 - 解释名词、回答问题
      - Unicode: **00000065**
      - UTF-8: **0065**
 
-2. 黄色的 RGB 颜色编码为：`#FFFF00`
+2. 黄色的 RGB 颜色编码为：`rgb(255, 255, 0)` or `#FFFF00`
 
 3. Windows 屏幕截图，得到一张分辨率为 1259 x 946 的位图，并使用 Windows 画图软件以默认设置分别保存为 bmp、png、jpg、tiff 格式：
 
