--- a/hw05.md
+++ b/hw05.md
@@ -48,3 +48,16 @@ Same pair of A and B produces the same result. So the two formulas are circuit e
 ![Expressions that could modify bit pattern](images/homework/05-modify-bit-pattern.png)
 
 ## Part 2 - 解释名词
+
+1. Logic gate
+    - In electronics, a **logic gate** is an idealized or physical device implementing a Boolean function; that is, it performs a logical operation on one or more binary inputs and produces a single binary output. 
+    - 在电学中，**逻辑门**是一个用于引入布尔功能的理想化或实际存在的设备。也就是说，它能够对一个或两个二进制输入进行处理，并产生一个二进制输出。
+
+2. Boolean algebra
+    - In mathematics and mathematical logic, **Boolean algebra** is the branch of algebra in which the values of the variables are the truth values true and false, usually denoted 1 and 0 respectively.
+    - 在数学和逻辑数学中，**布尔代数**是代数的一个分支。其特点是，变量的值都是真值（逻辑值）：真和假，通常以 1 和 0 来表示。
+
+## Part 3 - Flip-flop
+
+1. 中文翻译：触发器
+2. I guess it can store 1 bit. (Maybe
