--- a/hw06.md
+++ b/hw06.md
@@ -57,4 +57,19 @@ title: Homework 06 - Computing Components
 4. Bus (computing)
 
     - In computer architecture, a **bus** (a contraction of the Latin omnibus) is a communication system that transfers data between components inside a computer, or between computers. This expression covers all related hardware components (wire, optical fiber, etc.) and software, including communication protocols.
-    - 在计算机架构中，总线（英文名源于拉丁文 omnibus 的缩写）是一种能够让数据在一台电脑中的各部件，或者在多台电脑间进行传输的交流系统。
+    - 在计算机架构中，**总线**（英文名源于拉丁文 omnibus 的缩写）是一种能够让数据在一台电脑中的各部件，或者在多台电脑间进行传输的交流系统。这个概念囊括了所有相关的硬件组件（如电缆、光纤等）和软件，包括用于通信的协议。
+
+5. Parallel Computing
+    - **Parallel computing** is a type of computation in which many calculations or the execution of processes are carried out simultaneously. Large problems can often be divided into smaller ones, which can then be solved at the same time. 
+    - **并行计算**是一种同时计算或者同时执行多个进程的计算类型。大问题通常能被分解成小的问题，而这些小的问题是可以同时被解决的。
+
+## Part 3 - Explaination about Cloud Computing
+
+云计算，按照字面意思，即是在“云”上进行计算。这里的“云”指的是大型的服务器集群，通常配以优质的硬件，通过规模效应可以有效降低大量计算所需的成本。现在的云计算可以做到“即开即停”、“即时扩容”，满足不同变化的计算需要。传统的计算可能需要耗费大量成本部署专门的服务器，但这些服务器计算完成后便会空置，造成极大的浪费。而云计算可以规避这种弊端，同时降低成本。
+
+## Part 4 - Memory
+
+1. **3** 指的是 SDRAM（一种内存规格）的 DDR 3 代版本，**1333** 指的是内存频率。
+2. **DDR3-1600** 的内存安装在只支持 **DDR3-1333** 的主板上，会被降低到 **1333** 频率运行，**无法**提高性能。
+3. 2 条内存安装在双通道内存插槽上，**可以**提高性能。
+4. 需要 log<sub>2</sub>16 + 30 = **34** 位地址。
